<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blikinn</string>
    <string name="app_name_main_screen">BLIKINN</string>
    <string name="action_settings">Settings</string>
    <string name="btnNewsMainScreenText">Fréttir</string>
    <string name="btnGamesResultsMainScreenText">Leikir og úrslit</string>
    <string name="btnPlayersMainScreenText">Leikmenn</string>
    <string name="btnTrophiesMainScreenText">Bikaraskápurinn</string>
    <string name="btnRadioMainScreenText">Útvarp</string>
    <string name="btnTvMainScreenText">Blikar TV</string>
    <string name="btnPicturesMainScreenText">#Blikinn</string>
    <string name="logoAdText">Landsbankinn</string>
    <string name="logoText">Blikinn</string>
    <string name="btnMenTrophiesMenScreenText">Karlar</string>
    <string name="btnWomenTrophiesMenScreenText">Konur</string>
    <string name="about">Um Blikann</string>
    <string name="aboutText">Appið Blikinn var unnið af nemendum við Verkfræði- og náttúruvísindadeild Háskóla Íslands haustið 2013. Blikinn var unninn í samstarfi við Knattspyrnudeild Breiðabliks og www.blikar.is
        \n
        \nNemendur:
        \nAðalsteinn Stefánsson
        \nGuðný Lára Guðmundsdóttir
        \nMargrét Sigurpálsdóttir
        \nSnorri Hannesson
        \n
        \nÞakkir:
        \nGylfi Steinn Gunnarsson
        \nJónas Óli Jónasson
		\nRagnar Miguel Herreros
		\nStjórn Knattspyrnudeildar Breiðabliks
		</string>

	<string name="TrophiesIcelandMenText">
		2010
	</string>
	
	<string name="TrophiesCupMenText">
		2009
	</string>
	
	<string name="BiggestWinMenText">
		13-0 gegn HK í B deild 1998
		\n11-0 gegn Víkingi Ó. í B deild 1975
		\n9-0 gegn ÍBÍ í B deild 1974
	</string>
	
	<string name="TrophiesIcelandWomenText">
		1977, 1979, 1980, 1981, 1982, 1983, 1990, 1991, 1992, 1994, 1995, 1996, 2000, 2001, 2005
	</string>
	
	<string name="TrophiesCupWomenText">
		1981, 1982, 1983, 1994, 1996, 1997, 1998, 2000, 2005, 2013 
	</string>
	
	<string name="BiggestWinWomenText">
		18-0 gegn Selfossi í B-deild 1988
	</string>	    

	<string name="btnMenTrophiesWomenScreenText">Karlar</string>
	<string name="btnWomenTrophiesWomenScreenText">Konur</string>
	
	<string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
    <string name="error_player">Náðist ekki að hlaða myndbandi, athugaðu hvort YouTube spilari sé í símanum þínum (%1$s)</string>
    
    <string name="descr_image">Image</string>
    
    <string name="live_games">Leikir í gangi</string>
    <string name="league_table">Deildarstaða</string>
    <string name="results">Úrslit</string>
    <string name="fixtures">Næstu leikir</string>
    <string name="men">KARLAR</string>
    <string name="women">KONUR</string>

</resources>
