<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#27ae60"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/icon_tv"
        android:layout_width="80dp"
        android:layout_height="63dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#1abc9c"
        android:src="@drawable/ic_tv" />

    <Button
        android:id="@+id/btnTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/icon_tv"
        android:background="@drawable/button_background"
        android:drawableRight="@drawable/ic_arrow"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btnTvMainScreenText"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iconRadio"
        android:layout_alignLeft="@+id/btnTV"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3"
        android:background="@drawable/button_background"
        android:drawableRight="@drawable/ic_arrow"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btnRadioMainScreenText"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:layout_above="@+id/icon_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#7f8c8d" />

    <ImageButton
        android:id="@+id/iconRadio"
        android:layout_width="80dp"
        android:layout_height="63dp"
        android:layout_above="@+id/textView1"
        android:layout_toLeftOf="@+id/btnPhotos"
        android:background="#9b59b6"
        android:src="@drawable/ic_radio" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:layout_above="@+id/iconRadio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#7f8c8d" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:layout_above="@+id/iconPhotos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#7f8c8d" />
    
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:layout_above="@+id/iconGames"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#7f8c8d" />
    
     <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:layout_above="@+id/iconTrophies"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#7f8c8d" />   

      <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:layout_above="@+id/iconPlayers"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#7f8c8d" />
        
    <ImageButton
        android:id="@+id/iconPhotos"
        android:layout_width="80dp"
        android:layout_height="63dp"
        android:layout_above="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:background="#e74c3c"
        android:src="@drawable/ic_photo" />

    <Button
        android:id="@+id/btnPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iconPhotos"
        android:layout_alignLeft="@+id/btnRadio"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/iconPhotos"
        android:background="@drawable/button_background"
        android:drawableRight="@drawable/ic_arrow"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btnPicturesMainScreenText"
        android:textSize="15sp" />

    <ImageButton
        android:id="@+id/iconTrophies"
        android:layout_width="80dp"
        android:layout_height="63dp"
        android:layout_above="@+id/textView2"
        android:layout_toLeftOf="@+id/btnPhotos"
        android:background="#f1c40f"
        android:src="@drawable/ic_trophy" />

    <Button
        android:id="@+id/btnTrophies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iconTrophies"
        android:layout_alignLeft="@+id/btnPhotos"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/iconTrophies"
        android:background="@drawable/button_background"
        android:drawableRight="@drawable/ic_arrow"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btnTrophiesMainScreenText"
        android:textSize="15sp" />

    <ImageButton
        android:id="@+id/iconPlayers"
        android:layout_width="80dp"
        android:layout_height="63dp"
        android:layout_above="@+id/textView4"
        android:layout_toLeftOf="@+id/btnTrophies"
        android:background="#2ecc71"
        android:src="@drawable/ic_player" />

    <Button
        android:id="@+id/btnPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iconPlayers"
        android:layout_alignLeft="@+id/btnTrophies"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/iconPlayers"
        android:background="@drawable/button_background"
        android:drawableRight="@drawable/ic_arrow"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btnPlayersMainScreenText"
        android:textSize="15sp" />

    <ImageButton
        android:id="@+id/iconGames"
        android:layout_width="80dp"
        android:layout_height="63dp"
        android:layout_above="@+id/textView5"
        android:layout_toLeftOf="@+id/btnPlayers"
        android:background="#e67e22"
        android:src="@drawable/ic_games" />

    <Button
        android:id="@+id/btnGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iconGames"
        android:layout_alignLeft="@+id/btnPlayers"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/iconGames"
        android:background="@drawable/button_background"
        android:drawableRight="@drawable/ic_arrow"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btnGamesResultsMainScreenText"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/BlikinnHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/iconNews"
        android:layout_width="80dp"
        android:layout_height="63dp"
        android:layout_above="@+id/textView7"
        android:layout_toLeftOf="@+id/btnGames"
        android:background="#3498db"
        android:src="@drawable/ic_news" />

    <Button
        android:id="@+id/btnNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iconNews"
        android:layout_alignLeft="@+id/btnGames"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/iconNews"
        android:background="@drawable/button_background"
        android:drawableRight="@drawable/ic_arrow"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btnNewsMainScreenText"
        android:textSize="15sp" />
 
</RelativeLayout>